Added system specs as part of apply-specs errand
- Created a new ops file for systems spec
- Modified addons-spec ops file to only include the addons YAML
- Added systems spec to be added to manifest gen by default

[#154838510]

Signed-off-by: Shash Reddy <sreddy@pivotal.io>

--- a/manifests/ops-files/addons-spec.yml
+++ b/manifests/ops-files/addons-spec.yml
@@ -1,16 +1,3 @@
 - type: replace
-  path: /instance_groups/-
-  value:
-    name: apply-addons
-    instances: 1
-    networks:
-    - name: default
-    azs: [z1]
-    lifecycle: errand
-    jobs:
-    - name: apply-specs
-      release: kubo
-      properties:
-        addons-spec: ((addons-spec))
-    stemcell: trusty
-    vm_type: minimal
+  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/properties/addons-spec?
+  value: ((addons-spec))
