Added kubernetes-roles job to cfcr manifest
- Removed references of the kubernetes-system-specs job

[#154838510]

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -86,18 +86,14 @@ instance_groups:
       api-token: ((kube-scheduler-password))
       tls:
         kubernetes: ((tls-kubernetes))
-  - name: kubernetes-system-specs
+  - name: kubernetes-roles
     release: kubo
     properties:
-      api-token: ((kubelet-password))
       admin-username: admin
       admin-password: ((kubo-admin-password))
       authorization-mode: rbac
       tls:
         kubernetes: ((tls-kubernetes))
-        heapster: ((tls-heapster))
-        influxdb: ((tls-influxdb))
-        kubernetes-dashboard: ((tls-kubernetes-dashboard))
   - name: etcd
     release: kubo-etcd
     properties:
