Added cloud provider optionally to the new job
[#154838510]

--- a/manifests/ops-files/iaas/vsphere/cloud-provider.yml
+++ b/manifests/ops-files/iaas/vsphere/cloud-provider.yml
@@ -21,6 +21,11 @@
       cloud-provider: {from: worker}
 
 - type: replace
+  path: /instance_groups/name=master/jobs/name=kubernetes-roles/consumes?
+  value:
+    cloud-provider: {from: master}
+
+- type: replace
   path: /instance_groups/name=worker/jobs/-
   value:
     name: cloud-provider
