Use UAA client to connect to credhub
Since BOSH deployment has switched to using client

[#155061434]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
+++ b/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
@@ -6,4 +6,4 @@ uaa_ssl:
   ca: TEST CERTIFICATE
 credhub_tls:
   ca: ANOTHER TEST CERTIFICATE
-credhub_cli_password: MOCK_PASSWORD
+credhub_admin_client_secret: MOCK_PASSWORD
