--- a/manifests/ops-files/add-no-proxy.yml
+++ b/manifests/ops-files/add-no-proxy.yml
@@ -1,3 +1,23 @@
 - type: replace
   path: /instance_groups/name=worker/jobs/name=docker/properties/env/no_proxy?
   value: ((no_proxy))
+
+- type: replace
+  path: /instance_groups/name=worker/jobs/name=kubelet/properties/no_proxy?
+  value: ((no_proxy))
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/no_proxy?
+  value: ((no_proxy))
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kubernetes-api-route-registrar/properties/no_proxy?
+  value: ((no_proxy))
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-controller-manager/properties/no_proxy?
+  value: ((no_proxy))
+
+- type: replace
+  path: /instance_groups/name=route-sync/jobs/name=route-sync/properties/no_proxy?
+  value: ((no_proxy))
