--- a/manifests/ops-files/cf-routing.yml
+++ b/manifests/ops-files/cf-routing.yml
@@ -36,6 +36,8 @@
     - name: default
     azs: [z1]
     jobs:
+    - name: bpm
+      release: bpm
     - name: route-sync
       release: kubo
       properties:
