Consume cloud-provider links on kubernetes jobs
[#153690804]

Signed-off-by: James Myers <jfmyers9@gmail.com>

--- a/manifests/ops-files/iaas/aws/cloud-provider.yml
+++ b/manifests/ops-files/iaas/aws/cloud-provider.yml
@@ -7,12 +7,22 @@
       cloud-provider:
         type: aws
     provides:
-      cloud-provider: {as: master}
+      cloud-provider: {as: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-apiserver/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-controller-manager/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
 
 - type: replace
   path: /instance_groups/name=master/jobs/name=kubernetes-roles/consumes?
   value:
-    cloud-provider: {from: master}
+    cloud-provider: {from: master-cloud-provider}
 
 - type: replace
   path: /instance_groups/name=worker/jobs/-
@@ -22,3 +32,10 @@
     properties:
       cloud-provider:
         type: aws
+    provides:
+      cloud-provider: {as: worker-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=worker/jobs/name=kubelet/consumes?
+  value:
+    cloud-provider: {from: worker-cloud-provider}
