--- a/manifests/ops-files/iaas/openstack/cloud-provider.yml
+++ b/manifests/ops-files/iaas/openstack/cloud-provider.yml
@@ -13,12 +13,22 @@
           tenant-id: ((openstack_project_id))
           domain-name: ((openstack_domain))
     provides:
-      cloud-provider: {as: master}
+      cloud-provider: {as: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-apiserver/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-controller-manager/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
 
 - type: replace
   path: /instance_groups/name=master/jobs/name=kubernetes-roles/consumes?
   value:
-    cloud-provider: {from: master}
+    cloud-provider: {from: master-cloud-provider}
 
 - type: replace
   path: /instance_groups/name=worker/jobs/-
@@ -34,3 +44,10 @@
           password: ((openstack_password))
           tenant-id: ((openstack_project_id))
           domain-name: ((openstack_domain))
+    provides:
+      cloud-provider: {as: worker-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=worker/jobs/name=kubelet/consumes?
+  value:
+    cloud-provider: {from: worker-cloud-provider}
