--- a/manifests/ops-files/iaas/gcp/cloud-provider.yml
+++ b/manifests/ops-files/iaas/gcp/cloud-provider.yml
@@ -11,12 +11,22 @@
           network-name: ((network))
           worker-node-tag: ((director_name))-((deployment_name))-worker
     provides:
-      cloud-provider: {as: master}
+      cloud-provider: {as: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-apiserver/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-controller-manager/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
 
 - type: replace
   path: /instance_groups/name=master/jobs/name=kubernetes-roles/consumes?
   value:
-    cloud-provider: {from: master}
+    cloud-provider: {from: master-cloud-provider}
 
 - type: replace
   path: /instance_groups/name=worker/jobs/-
@@ -30,3 +40,10 @@
           project-id: ((project_id))
           network-name: ((network))
           worker-node-tag: ((director_name))-((deployment_name))-worker
+    provides:
+      cloud-provider: {as: worker-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=worker/jobs/name=kubelet/consumes?
+  value:
+    cloud-provider: {from: worker-cloud-provider}
