--- a/configurations/aws/project-secrets.yml
+++ b/configurations/aws/project-secrets.yml
@@ -1,2 +1,3 @@
 access_key_id: # AWS Access Key ID
 secret_access_key: # AWS Access Key Secret
+# iam_instance_profile: # IAM Instance profile to be used rather than a key and secret
