--- a/configurations/aws/project-config.yml
+++ b/configurations/aws/project-config.yml
@@ -6,6 +6,7 @@ region: # AWS Region ID
 master_iam_instance_profile: # IAM Instance profile required by cloud provider on k8s master
 worker_iam_instance_profile: # IAM Instance profile required by cloud provider on k8s worker
 kubernetes_cluster_tag: # Tag to match public ELB subnet, Kubo workers subnet and Kubo worker VMs to make Kubernetes support ELB
+# encrypt_key: # ARN to be used for encryption, the KMS key.
 
 # IaaS routing mode settings
 # Comment out this section when using CF routing mode
