Adds cluster-signing property for the kube-controller-manager job
* https://github.com/cloudfoundry-incubator/kubo-release/pull/187

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -84,6 +84,7 @@ instance_groups:
     release: kubo
     properties:
       api-token: ((kube-controller-manager-password))
+      cluster-signing: ((kubo_ca))
       service-account-private-key: ((service-account-key.private_key))
       tls:
         kubernetes: ((tls-kubernetes))
