--- a/manifests/ops-files/misc/bootstrap.yml
+++ b/manifests/ops-files/misc/bootstrap.yml
@@ -27,6 +27,10 @@
   value: ((authorization_mode))
 
 - type: replace
+  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/properties/authorization-mode
+  value: ((authorization_mode))
+
+- type: replace
   path: /instance_groups/name=master/jobs/name=kubernetes-roles/properties/authorization-mode
   value: ((authorization_mode))
 
