Add cloud-provider link to all iaases
[#155936152]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/ops-files/iaas/vsphere/cloud-provider.yml
+++ b/manifests/ops-files/iaas/vsphere/cloud-provider.yml
@@ -57,3 +57,8 @@
   path: /instance_groups/name=worker/jobs/name=kubelet/consumes?
   value:
     cloud-provider: {from: worker-cloud-provider}
+
+- type: replace
+  path: /instance_groups/name=apply-addons/jobs/name=apply-specs/consumes?
+  value:
+    cloud-provider: {from: master-cloud-provider}
