WIP working on Azure support
We're using these PRs
(https://github.com/cloudfoundry-incubator/kubo-release/pull/191)
(https://github.com/cloudfoundry-incubator/kubo-deployment/pull/285)
to test CFCR on Azure

[#155619338]

Signed-off-by: Ben Chapman <bchapman@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -138,6 +138,12 @@ instance_groups:
           ca: ((tls-etcd.ca))
           certificate: ((tls-etcd.certificate))
           private_key: ((tls-etcd.private_key))
+  - name: node-dns-aliases
+    release: kubo
+    properties:
+      tls:
+        kubernetes: ((tls-kubernetes))
+      api-token: ((kube-scheduler-password))
   stemcell: trusty
   vm_type: small
   persistent_disk: 5120
@@ -184,6 +190,12 @@ instance_groups:
       tls:
         kubernetes: ((tls-kubernetes))
       api-token: ((kube-proxy-password))
+  - name: node-dns-aliases
+    release: kubo
+    properties:
+      tls:
+        kubernetes: ((tls-kubernetes))
+      api-token: ((kube-scheduler-password))
   stemcell: trusty
   vm_type: small-highmem
   persistent_disk: 10240
