--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -60,7 +60,7 @@ instance_groups:
     properties:
       admin-username: admin
       admin-password: ((kubo-admin-password))
-      authorization-mode: rbac
+      authorization-mode: abac
       tls:
         kubernetes: ((tls-kubernetes))
         heapster: ((tls-heapster))
@@ -93,7 +93,7 @@ instance_groups:
       kubelet-drain-password: ((kubelet-drain-password))
       backend_port: 8443 # Bosh links hack
       port: 8443
-      authorization-mode: rbac
+      authorization-mode: abac
       service-account-public-key: ((service-account-key.public_key))
       tls:
         kubernetes:
@@ -118,7 +118,7 @@ instance_groups:
     properties:
       admin-username: admin
       admin-password: ((kubo-admin-password))
-      authorization-mode: rbac
+      authorization-mode: abac
       tls:
         kubernetes: ((tls-kubernetes))
   - name: etcd
