use vm_extensions for cloud providers and iaas load balancers
* canonical vm_extension names provide a consistent interface for
    operators to configure their cpis for cfcr support.
* defining cfcr-master-network-properties gives bosh operators a place
    to hook up iaas-specific lb config
* cloud-provider ops files can, independently of vm_type, add their own
    cfcr-{master,worker}-iam-properties to attach iaas+instance-specific iam
    privileges.

--- a/configurations/aws/cloud-config.yml
+++ b/configurations/aws/cloud-config.yml
@@ -9,21 +9,14 @@ azs:
   cloud_properties:
     availability_zone: ((az))
 
+vm_extensions:
+- name: cfcr-master-network-properties
+
 vm_types:
 - name: minimal
   cloud_properties:
     instance_type: t2.small
     ephemeral_disk: {size: 25_000}
-- name: master
-  cloud_properties:
-    instance_type: t2.small
-    ephemeral_disk: {size: 25_000}
-    iam_instance_profile: ((master_iam_instance_profile))
-- name: worker
-  cloud_properties:
-    instance_type: m4.xlarge
-    ephemeral_disk: {size: 100_000}
-    iam_instance_profile: ((worker_iam_instance_profile))
 
 networks:
 - name: default
