--- a/manifests/ops-files/iaas/aws/add-master-credentials.yml
+++ b/manifests/ops-files/iaas/aws/add-master-credentials.yml
@@ -1,3 +1,6 @@
+- type: remove
+  path: /instance_groups/name=master/vm_extensions/name=cfcr-worker-iam-properties?
+
 - type: replace
   path: /instance_groups/name=master/jobs/name=cloud-provider/properties/cloud-provider/aws?
   value:
