--- a/manifests/ops-files/iaas/aws/cloud-provider.yml
+++ b/manifests/ops-files/iaas/aws/cloud-provider.yml
@@ -1,4 +1,12 @@
 - type: replace
+  path: /instance_groups/name=master/vm_extensions?/-
+  value: cfcr-master-iam-properties
+
+- type: replace
+  path: /instance_groups/name=worker/vm_extensions?/-
+  value: cfcr-worker-iam-properties
+
+- type: replace
   path: /instance_groups/name=master/jobs/-
   value:
     name: cloud-provider
