--- a/manifests/ops-files/iaas/gcp/add-service-key-worker.yml
+++ b/manifests/ops-files/iaas/gcp/add-service-key-worker.yml
@@ -1,3 +1,6 @@
+- type: remove
+  path: /instance_groups/name=worker/vm_extensions/name=cfcr-worker-iam-properties?
+
 - type: replace
   path: /instance_groups/name=worker/jobs/name=cloud-provider/properties/cloud-provider/gce/service_key?
   value: ((service_key_worker))
