--- a/src/kubo-deployment-tests/resources/ops-files/cloud-config-plus-plus.yml
+++ b/src/kubo-deployment-tests/resources/ops-files/cloud-config-plus-plus.yml
@@ -1,3 +1,3 @@
 - type: replace
-  path: /vm_types/name=worker/cloud_properties/tags
+  path: /vm_types/name=worker?/cloud_properties/tags
   value: supertest
