--- a/src/kubo-deployment-tests/resources/ops-files/cloud-config-plus.yml
+++ b/src/kubo-deployment-tests/resources/ops-files/cloud-config-plus.yml
@@ -1,3 +1,3 @@
 - type: replace
-  path: /vm_types/name=worker/cloud_properties/machine_type
+  path: /vm_types/name=worker?/cloud_properties/machine_type
   value: foo
