Use Ubuntu Xenial stemcell
[#157047744]

--- a/bosh-deployment/runtime-configs/dns.yml
+++ b/bosh-deployment/runtime-configs/dns.yml
@@ -20,7 +20,7 @@ addons:
           tls: ((/dns_healthcheck_client_tls))
   include:
     stemcell:
-    - os: ubuntu-trusty
+    - os: ubuntu-xenial
 - name: bosh-dns-windows
   jobs:
   - name: bosh-dns-windows
