some manifest tuning for deployment in azure.

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -146,6 +146,12 @@ instance_groups:
           ca: ((tls-etcd-v0-17-0.ca))
           certificate: ((tls-etcd-v0-17-0.certificate))
           private_key: ((tls-etcd-v0-17-0.private_key))
+  - name: node-dns-aliases
+    release: kubo
+    properties:
+      tls:
+        kubernetes: ((tls-kubernetes))
+      api-token: ((kube-scheduler-password))
   - name: smoke-tests
     release: kubo
   stemcell: trusty
@@ -161,8 +167,6 @@ instance_groups:
   - name: secure-var-vcap
     release: kubo
   - name: flanneld
-    release: kubo
-  - name: cifs-utils
     release: kubo
   - name: docker
     release: docker
@@ -196,6 +200,12 @@ instance_groups:
       tls:
         kubernetes: ((tls-kubernetes))
       api-token: ((kube-proxy-password))
+  - name: node-dns-aliases
+    release: kubo
+    properties:
+      tls:
+        kubernetes: ((tls-kubernetes))
+      api-token: ((kube-scheduler-password))
   stemcell: trusty
   vm_type: small-highmem
   persistent_disk: 10240
