Add kubelet-password back to make upgrades work
The upgrade pipeline was failing because we removed kubelet-password from
the tokens.csv. This causes all kubelets to be NotReady until they get
rolled. And kube-proxy stops forwarding traffic to them.

[#153592308]

Signed-off-by: Akshay Mankar <amankar@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -90,6 +90,7 @@ instance_groups:
       admin-username: admin
       admin-password: ((kubo-admin-password))
       kubelet-bootstrap-token: ((kubelet-bootstrap-token-id)).((kubelet-bootstrap-token-secret))
+      kubelet-password: ((kubelet-password))
       kube-proxy-password: ((kube-proxy-password))
       kube-controller-manager-password: ((kube-controller-manager-password))
       kube-scheduler-password: ((kube-scheduler-password))
@@ -213,6 +214,8 @@ variables:
   options:
     length: 16
     exclude_upper: true
+- name: kubelet-password
+  type: password
 - name: kubelet-drain-password
   type: password
 - name: kube-proxy-password
