Revert "Set up Kubelet certificate bootstrapping (#269)"
This reverts commit 3d89552d9722edc33493245234ff9381ca7c1ba9.

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/src/kubo-deployment-tests/resources/environments/with_vars/name-vars.yml
+++ b/src/kubo-deployment-tests/resources/environments/with_vars/name-vars.yml
@@ -1,2 +1,2 @@
 routing_cf_client_secret: With turkey drink water
-kubo-admin-password: Shields up, ancient life!
+kubelet-password: Shields up, ancient life!
