--- a/configurations/generic/project-config.yml
+++ b/configurations/generic/project-config.yml
@@ -10,6 +10,8 @@ kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest
 
 worker_count: 3
 
+authorization_mode: rbac # RBAC or ABAC authorization modes for the K8s cluster.
+
 # Kubernetes OIDC settings
 # https://kubernetes.io/docs/admin/authentication/#configuring-the-api-server
 # oidc_issuer_url:
