--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -63,6 +63,7 @@ instance_groups:
   - name: apply-specs
     release: kubo
     properties:
+      api-token: ((kubelet-password))
       admin-username: admin
       admin-password: ((kubo-admin-password))
       tls:
@@ -89,7 +90,6 @@ instance_groups:
     properties:
       admin-username: admin
       admin-password: ((kubo-admin-password))
-      kubelet-bootstrap-token: ((kubelet-bootstrap-token-id)).((kubelet-bootstrap-token-secret))
       kubelet-password: ((kubelet-password))
       kube-proxy-password: ((kube-proxy-password))
       kube-controller-manager-password: ((kube-controller-manager-password))
@@ -111,7 +111,7 @@ instance_groups:
       cluster-signing: ((kubo_ca))
       service-account-private-key: ((service-account-key.private_key))
       tls:
-        kubo-ca: ((kubo_ca))
+        kubernetes: ((tls-kubernetes))
   - name: kube-scheduler
     release: kubo
     properties:
@@ -180,11 +180,11 @@ instance_groups:
   - name: kubelet
     release: kubo
     properties:
-      admin-password: ((kubo-admin-password))
-      bootstrap-token: ((kubelet-bootstrap-token-id)).((kubelet-bootstrap-token-secret))
+      api-token: ((kubelet-password))
       drain-api-token: ((kubelet-drain-password))
       tls:
         kubernetes: ((tls-kubernetes))
+        kubelet: ((tls-kubelet))
   - name: kube-proxy
     release: kubo
     properties:
@@ -204,16 +204,6 @@ update:
 variables:
 - name: kubo-admin-password
   type: password
-- name: kubelet-bootstrap-token-id
-  type: password
-  options:
-    length: 6
-    exclude_upper: true
-- name: kubelet-bootstrap-token-secret
-  type: password
-  options:
-    length: 16
-    exclude_upper: true
 - name: kubelet-password
   type: password
 - name: kubelet-drain-password
@@ -232,6 +222,14 @@ variables:
   options:
     is_ca: true
     common_name: ca
+
+- name: tls-kubelet
+  type: certificate
+  options:
+    ca: kubo_ca
+    organization: "system:nodes"
+    common_name: kubelet.cfcr.internal
+    alternative_names: []
 
 - name: tls-kubernetes
   type: certificate
