--- a/manifests/ops-files/example-vars-files/system-specs.yml
+++ b/manifests/ops-files/example-vars-files/system-specs.yml
@@ -1,4 +1,6 @@
+kubelet-password: password
 kubo-admin-password: admin-password
+authorization_mode: rbac
 tls-kubernetes:
   ca: ca
   certificate: cert
