--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -104,6 +104,7 @@ instance_groups:
           ca: ((tls-kubernetes.ca))
           certificate: ((tls-kubernetes.certificate))
           private_key: ((tls-kubernetes.private_key))
+        kubelet-client: ((tls-kubelet-client))
   - name: kube-controller-manager
     release: kubo
     properties:
@@ -230,6 +231,15 @@ variables:
     organization: "system:nodes"
     common_name: kubelet.cfcr.internal
     alternative_names: []
+
+- name: tls-kubelet-client
+  type: certificate
+  options:
+    ca: kubo_ca
+    common_name: kube-apiserver.cfcr.internal
+    organization: "system:masters"
+    extended_key_usage:
+    - client_auth
 
 - name: tls-kubernetes
   type: certificate
