Revert "Remove references to deprecated tls-kubelet"
This reverts commit c0e5004c5bbb14289cc413a1585d3b3ff3057c0a.

--- a/manifests/ops-files/cf-routing-links.yml
+++ b/manifests/ops-files/cf-routing-links.yml
@@ -5,6 +5,14 @@
     version: latest
 
 - type: replace
+  path: /variables/name=tls-kubelet/options/common_name
+  value: ((kubernetes_master_host))
+
+- type: replace
+  path: /variables/name=tls-kubelet/options/alternative_names
+  value: [((kubernetes_master_host))]
+
+- type: replace
   path: /variables/name=tls-kubernetes/options/common_name
   value: ((kubernetes_master_host))
 
