--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -63,6 +63,7 @@ instance_groups:
   - name: apply-specs
     release: kubo
     properties:
+      api-token: ((kubelet-password))
       admin-username: admin
       admin-password: ((kubo-admin-password))
       tls:
@@ -88,9 +89,8 @@ instance_groups:
     release: kubo
     properties:
       admin-username: admin
-      kubelet-password: ((kubelet-password))
       admin-password: ((kubo-admin-password))
-      kubelet-bootstrap-token: ((kubelet-bootstrap-token-id)).((kubelet-bootstrap-token-secret))
+      kubelet-password: ((kubelet-password))
       kube-proxy-password: ((kube-proxy-password))
       kube-controller-manager-password: ((kube-controller-manager-password))
       kube-scheduler-password: ((kube-scheduler-password))
@@ -180,10 +180,11 @@ instance_groups:
   - name: kubelet
     release: kubo
     properties:
+      api-token: ((kubelet-password))
       drain-api-token: ((kubelet-drain-password))
       tls:
         kubernetes: ((tls-kubernetes))
-        bootstrap_token: ((kubelet-bootstrap-token-id)).((kubelet-bootstrap-token-secret))
+        kubelet: ((tls-kubelet))
   - name: kube-proxy
     release: kubo
     properties:
@@ -201,20 +202,10 @@ update:
   update_watch_time: 10000-300000
 
 variables:
-- name: kubelet-password
-  type: password
 - name: kubo-admin-password
   type: password
-- name: kubelet-bootstrap-token-id
+- name: kubelet-password
   type: password
-  options:
-    length: 16
-    exclude_upper: true
-- name: kubelet-bootstrap-token-secret
-  type: password
-  options:
-    length: 16
-    exclude_upper: true
 - name: kubelet-drain-password
   type: password
 - name: kube-proxy-password
@@ -231,6 +222,14 @@ variables:
   options:
     is_ca: true
     common_name: ca
+
+- name: tls-kubelet
+  type: certificate
+  options:
+    ca: kubo_ca
+    organization: "system:nodes"
+    common_name: kubelet.cfcr.internal
+    alternative_names: []
 
 - name: tls-kubernetes
   type: certificate
