Remove organization from tls-kubelet-client
[#157732524]

Signed-off-by: Mark James Hender <mhender@pivotal.io>

--- a/manifests/ops-files/misc/local-config-server.yml
+++ b/manifests/ops-files/misc/local-config-server.yml
@@ -1,4 +1,6 @@
 - type: remove
   path: /variables/name=tls-kubelet/options/organization
 - type: remove
+  path: /variables/name=tls-kubelet-client/options/organization
+- type: remove
   path: /variables/name=tls-kubernetes/options/organization
