--- a/manifests/ops-files/iaas/virtualbox/bosh-lite.yml
+++ b/manifests/ops-files/iaas/virtualbox/bosh-lite.yml
@@ -1,29 +1,25 @@
 - type: replace
-  path: /variables/name=tls-kubernetes/options/alternative_names/-
-  value: ((apiserver_dns))
+  path: /instance_groups/name=apply-addons/vm_type
+  value: default
+
+- type: replace
+  path: /instance_groups/name=master/vm_type
+  value: default
+
+- type: replace
+  path: /instance_groups/name=worker/vm_type
+  value: default
+
+- type: replace
+  path: /instance_groups/name=worker/update?/max_in_flight
+  value: 100%
 
 - type: replace
   path: /instance_groups/name=master/networks
   value:
   - name: default
-    static_ips: [10.244.0.50]
+    static_ips: [10.244.0.34]
 
 - type: replace
-  path: /instance_groups/name=master/instances
-  value: 1
-
-- type: replace
-  path: /instance_groups/name=master/azs
-  value: [ z1 ]
-
-- type: replace
-  path: /instance_groups/name=worker/instances
-  value: 2
-
-- type: replace
-  path: /instance_groups/name=worker/azs
-  value: [ z1 ]
-
-- type: replace
-  path: /instance_groups/name=worker/update?/max_in_flight
-  value: 100%
+  path: /variables/name=tls-kubernetes/options/alternative_names/-
+  value: 10.244.0.34
