--- a/bosh-deployment/warden/cpi.yml
+++ b/bosh-deployment/warden/cpi.yml
@@ -1,17 +1,17 @@
 ---
 - type: replace
-  path: /releases/name=bosh-warden-cpi
+  path: /releases/-
   value:
     name: bosh-warden-cpi
-    version: "35"
-    url: https://bosh.io/d/github.com/cppforlife/bosh-warden-cpi-release?v=35
-    sha1: d1c79c61c5a1c3664e5456cc6cbce34f2111f2d7
+    version: "40"
+    url: https://bosh.io/d/github.com/cppforlife/bosh-warden-cpi-release?v=40
+    sha1: 9f579b1615bc95494eaa8579728fe4764e3b1e16
 
 - type: replace
   path: /resource_pools/name=vms/stemcell?
   value:
-    url: https://bosh.io/d/stemcells/bosh-warden-boshlite-ubuntu-trusty-go_agent?v=3468.21
-    sha1: 72ff179da486fc4a5578740d33f0a1915b7c68f0
+    url: https://bosh.io/d/stemcells/bosh-warden-boshlite-ubuntu-trusty-go_agent?v=3586.16
+    sha1: 7b4b314abf3a8f06973f3533162be13d57ebed28
 
 # Configure VM size
 - type: replace
