--- a/bosh-deployment/ci/compiled-releases/pipeline-3445.yml
+++ b/bosh-deployment/ci/compiled-releases/pipeline-3445.yml
@@ -4,7 +4,7 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-deployment.git
-      branch: {{branch}}
+      branch: ((branch))
 
   # releases
 
@@ -36,8 +36,8 @@ resources:
     type: s3
     source:
       bucket: "bosh-compiled-release-tarballs"
-      access_key_id: {{aws_key_id}}
-      secret_access_key: {{aws_secret_access_key}}
+      access_key_id: ((aws_key_id))
+      secret_access_key: ((aws_secret_access_key))
       regexp: ".*-(\\d+).tgz"
 
 jobs:
@@ -47,10 +47,10 @@ jobs:
         - get: bosh-deployment
         - get: bosh-release
           version:
-            version: "263.6.0"
+            version: "263.10.0"
         - get: ubuntu-trusty-stemcell
           version:
-            version: "3445.24"
+            version: "3445.48"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -67,10 +67,10 @@ jobs:
           - get: bosh-deployment
           - get: uaa-release
             version:
-              version: "45.7"
+              version: "45.8"
           - get: ubuntu-trusty-stemcell
             version:
-              version: "3445.24"
+              version: "3445.48"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
@@ -90,7 +90,7 @@ jobs:
             version: "1.3.5"
         - get: ubuntu-trusty-stemcell
           version:
-            version: "3445.24"
+            version: "3445.48"
       - task: export-release
         file: bosh-deployment/ci/compiled-releases/tasks/export-release.yml
         privileged: true
