--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -4,9 +4,7 @@ releases:
 - name: kubo
   version: latest
 - name: cfcr-etcd
-  url: https://github.com/cloudfoundry-incubator/cfcr-etcd-release/releases/download/v1.3/cfcr-etcd-release-1.3.tgz
-  sha1: 72a9753b08980229c73b623c4ddeea59a5afc96f
-  version: '1.3'
+  version: latest
 - name: docker
   url: https://github.com/cloudfoundry-incubator/docker-boshrelease/releases/download/v32.0.0/docker-32.0.0.tgz
   sha1: f192296243e68150ae66656fc9134a2b2a023184
@@ -85,6 +83,10 @@ instance_groups:
     release: kubo
   - name: flanneld
     release: kubo
+  - name: bbr-cfcr-etcd-db
+    release: cfcr-etcd
+    properties:
+      release_level_backup: true
   - name: kube-apiserver
     release: kubo
     properties:
@@ -334,30 +336,6 @@ variables:
     extended_key_usage:
     - client_auth
 
-- name: /dns_api_tls_ca
-  opsname: global_dns_api_tls_ca
-  type: certificate
-  options:
-    is_ca: true
-    common_name: dns-api-tls-ca
-
-- name: /dns_api_server_tls
-  opsname: global_dns_api_server_tls
-  type: certificate
-  options:
-    ca: /dns_api_tls_ca
-    common_name: api.bosh-dns
-    extended_key_usage:
-    - server_auth
-
-- name: /dns_api_client_tls
-  opsname: global_dns_api_client_tls
-  type: certificate
-  options:
-    ca: /dns_api_tls_ca
-    common_name: api.bosh-dns
-    extended_key_usage:
-    - client_auth
 
 features:
   use_dns_addresses: true
