--- a/manifests/ops-files/cf-routing-links.yml
+++ b/manifests/ops-files/cf-routing-links.yml
@@ -59,5 +59,5 @@
       properties:
         cloud_foundry:
           app_domain: ((routing_cf_app_domain_name))
-    stemcell: trusty
+    stemcell: default
     vm_type: minimal
