--- a/manifests/ops-files/cf-routing.yml
+++ b/manifests/ops-files/cf-routing.yml
@@ -56,5 +56,5 @@
           port: ((routing_cf_nats_port))
           user: ((routing_cf_nats_username))
           password: ((routing_cf_nats_password))
-    stemcell: trusty
+    stemcell: default
     vm_type: minimal
