Apply addons and runtime-config to both stemcells
[#158004796]

Signed-off-by: Mark James Hender <mhender@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -30,6 +30,7 @@ addons:
   include:
     stemcells:
     - os: ubuntu-trusty
+    - os: ubuntu-xenial
   jobs:
   - name: bosh-dns
     release: bosh-dns
