kubo-dns-aliases job is part of k8s-engine
[#159624521]

Signed-off-by: Morena De Liddo <mdeliddo@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -53,7 +53,7 @@ addons:
 - name: bosh-dns-aliases
   jobs:
   - name: kubo-dns-aliases
-    release: kubo
+    release: k8s-engine
 
 instance_groups:
 - name: apply-addons
